--- a/src/main/resources/assets/hotpotato/lang/en_us.json
+++ b/src/main/resources/assets/hotpotato/lang/en_us.json
@@ -1,4 +1,4 @@
 {
-  "death.attack.hotpotato": "%1$s was left holding the Hot Potato",
-  "death.attack.hotpotato.player": "%2$s passed the Hot Potato to %1$s"
+  "death.attack.hotpotato": "%1$s needs to touch grass",
+  "death.attack.hotpotato.player": "%2$s ratioed %1$s"
 }
